# devbrief

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: cicd-guard.md  python-quality.md  release-prep.md  rust-quality.md  subcommand-impl.md  test-runner.md
.claude/rules/: git.md  python.md  rust.md  testing.md
.github/workflows/: ci.yml  release-wheels.yml  release.yml
assets/vhs/: devbrief-cache.tape  devbrief-env.tape
rust/: Cargo.toml
rust/src/: lib.rs
src/devbrief/: _devbrief_core.pyi  brief.py  cli.py  display.py  github.py  main.py
src/devbrief/commands/: auth.py  env.py  logs.py  repo.py
src/devbrief/core/: cache.py  config.py  credentials.py
src/devbrief/templates/: base.html
src/devbrief/templates/logs/: dashboard.html
tests/: MANUAL_QA.md  test_cache.py  test_credentials.py  test_display.py  test_env.py  test_github.py  test_logs.py
