[project]
name = "devbrief"
version = "0.1.0"
description = "Generate a human-readable brief for any GitHub repository using Claude AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "click>=8.3.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.scripts]
devbrief = "devbrief.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devbrief"]
