[project]
name = "devbrief"
version = "0.2.0"
description = "Generate a human-readable brief for any GitHub repository using Claude AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "typer>=0.15.0",
]
license = { text = "MIT" }
authors = [
  { name = "Sebastien Claro (s3bc40)", email = "s3bc40@gmail.com" }
]
keywords = ["cli", "github", "ai", "developer-tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/s3bc40/devbrief"
Repository = "https://github.com/s3bc40/devbrief"

[project.scripts]
devbrief = "devbrief.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devbrief"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
    "twine>=6.2.0",
]
