[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "devbrief"
version = "0.3.2"
description = "Generate a human-readable brief for any GitHub repository using Claude AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "rich>=14.3.3",
    "typer>=0.15.0",
    "uvicorn>=0.30.0",
    "maturin>=1.12.6",
]
license = { text = "MIT" }
authors = [
  { name = "Sebastien Claro (s3bc40)", email = "s3bc40@gmail.com" }
]
keywords = ["cli", "github", "ai", "developer-tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/s3bc40/devbrief"
Repository = "https://github.com/s3bc40/devbrief"

[project.scripts]
devbrief = "devbrief.cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "devbrief._devbrief_core"
exclude = [
  "assets/",
  "*.gif",
  "*.tape",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
    "twine>=6.2.0",
]
