[package]
name = "rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_devbrief_core"
# cdylib → Python extension (.so)
# rlib   → required by `cargo test` to build the test binary
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.27.0"
regex = "1"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
